# canon-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  cliff.toml  justfile
.github/workflows/: alpha.yml  ci.yml  release.yml
crates/canon-cli/: Cargo.toml  README.md
crates/canon-cli/src/: cli.rs
crates/canon-cli/src/commands/: add.rs  clean.rs  init.rs  install.rs  mod.rs  publish.rs  validate.rs
crates/canon-cli/src/config/: mod.rs
crates/canon-cli/src/core/: mod.rs
crates/canon-cli/src/utils/: error.rs  mod.rs
crates/canon-protocol/: Cargo.toml  README.md
crates/canon-protocol/src/: dependency.rs  error.rs  lib.rs  manifest.rs  repository.rs  signature.rs  specification.rs
docs/: CODE-SIGNING-SETUP.md  DEVELOPMENT.md  RELEASE.md  SPECIFICATION.md  WINDOWS-SECURITY.md
src/: cli.rs  main.rs
src/commands/: add.rs  build.rs  clean.rs  config.rs  init.rs  install.rs  mod.rs
src/core/: dependency.rs  mod.rs  repository.rs  specification.rs
src/utils/: error.rs
