[workspace]
members = ["crates/canon-protocol", "crates/canon-cli"]
resolver = "2"

[workspace.package]
authors = ["Paul Fryer <https://github.com/paulfryer>"]
license = "Apache-2.0"
repository = "https://github.com/canon-protocol/canon-cli"
homepage = "https://canon-protocol.org"
edition = "2021"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
sha2 = "0.10"
url = "2.4"
semver = "1.0"